# platforms-android-on-windows

./: CMakeLists.txt  README.md
